--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "keywords": ["download", "baduk", "weiqi", "go", "badukmoview"],
   "author": "Dmitrii Ivashko",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dmitriiivashko/badukmovies-downloader.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dmitriiivashko/badukmovies-downloader/issues"
+  },
   "devDependencies": {
     "babel-eslint": "^6.0.4",
     "eslint": "^2.9.0",
